---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: ????
  Features:
    - Add tech to let players build more than one landing pad or LPN requester per planet
    - Add new tips and trick
    - Add some tooltip to help players
---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-07-20
  Bugfixes:
    - Hot fix : remove debug statement [#11]
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-07-20
  Features:
    - Add a way to filter planet for space-platform (in space-platform gui) [#8]
  Bugfixes:
    - Correct bug on space-platform schedule, wrong wait condition [#9]
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2025-07-19
  Bugfixes:
    - Correct bug when on copy/paste settings in space-platform [#7]
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-07-19
  Bugfixes:
    - Correct bug when requester is destroy or replace (wrong librairy) [#6]
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-07-14
  Features:
    - Add tool for debugging
  Changes:
    - Add some check to avoid crash on nil value for provider (channel changement) [#5]
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-07-14
  Bugfixes:
    - Correct bug when provider/requester where deleted the network don't remove them [#5]
  Features:
    - Add label in the gui to better explain when items are requested
  Changes:
    - Rework some aspect of LPN GUI MANAGER to reduce lag spike
    - Add some check to avoid crash on nil value (cargo-pod) [#5]